# water_lab

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  show_medians.py
.github/workflows/: continuous-delivery.yml  tests-model.yml
docs/: api.md  ci.md  compétences.md  documentation_techine.md  eco_accesibilité.md  guide_utilisateur.md  mlflow.md  ocr.md  owasp.md  test_actions.md  user_stories_parcours.md
front/: app.py  headers.py
models/: water_xgboost_pipeline.joblib
monitoring/: prometheus.yml
src/: api.py  auth.py  database.py  database_models.py  init_database.py  logging_config.py  metrics.py  model.py  ocr_parser.py  ocr_service.py  pipeline.py  preprocessing.py  train.py  user_auth.py
tests/: test_api.py  test_cycle_model.py  test_front_headers.py  test_preprocessing.py
